Client-Side Verification
Different from validation, forms give text notification when a form is submitted and it actually works

The rest is organization and minor stuff

--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -90,6 +90,8 @@
 
 				<button big ng-click = "updateStudent()">Submit</button>
 			</form>
+			<br><br>
+			<span ng-class="{'errorText':formStatus == 0, 'successText':formStatus == 1}">{{formStatusText}}</span>
 		</div>
 	</body>
 </html>
