--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -2,29 +2,30 @@
 <html>
 	<head>
 		<title>Edit Student</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
-		<link rel = "stylesheet" type = "text/css" href="RecordStyle.css">
-		<link rel = "stylesheet" type = "text/css" href="siteStyle.css">
-		<script src = "ripple.js"></script>
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-  		<script src = "app.js"></script>
-  		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  		<script src="app.js"></script>
+		<script src="ripple.js"></script>
+
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
+		<link rel="stylesheet" type="text/css" href="RecordStyle.css">
 	</head>
 	<body>
 		<div class = "exterior" ng-app = "gideonApp" ng-controller = "editStudentCtrl">
@@ -32,6 +33,7 @@
 			<!--Form used for editing a student in the database-->
 			<form name = "form">
 				<div class="columnContainer" id="editStudentRow">
+					<!--Name input, required field-->
 					<div class="threeColumn">
 						<label for = "student">Full Name</label><br>
 						<div class="inputWrapperBig">
@@ -40,10 +42,14 @@
 						</div>
 						<span class="errorText" ng-show="form.client.$touched && form.client.$invalid">Name is required.</span>
 					</div>
+
+					<!--Email input, no required format-->
 					<div class="threeColumn">
 						<label for = "email">Email</label><br>
 						<input white big type = "text" ng-model = "Email">
 					</div>
+
+					<!--Grade selection-->
 					<div class="threeColumn">
 						<label for = "email">Grade</label><br>
 						<select white big name = "grade" id = "gradeBox" ng-model = "Grade">
@@ -64,17 +70,23 @@
 						</select>
 					</div>
 				</div><br>
+
 				<div class="columnContainer" id="editStudentRow">
+					<!--Phone input, no required format-->
 					<div class="twoColumn">
 						<label for = "email">Phone</label><br>
 						<input white big type = "text" ng-model = "Phone">
 					</div>
+
+					<!--Address input, no required format-->
 					<div class="twoColumn">
 						<label for = "email">Address</label><br>
 						<input white big type = "text" ng-model = "Address">
 					</div>
 				</div><br>
+				
 				<div class="columnContainer" id="editStudentRow">
+					<!--Gender selection-->
 					<div class="twoColumn">
 						<label for = "email">Gender</label><br>
 						<select white big name = "gender" id = "genderBox" ng-model = "Gender">
@@ -82,12 +94,15 @@
 							<option value = "Female">Female</option>
 						</select>
 					</div>
+
+					<!--Current passes input-->
 					<div class="twoColumn">
 						<label for = "email">Current Passes</label><br>
 						<input white big type = "text" ng-model = "CurrentPasses">
 					</div>
 				</div><br><br>
 
+				<!--Submit button to perform the update-->
 				<button big ng-click = "updateStudent()">Submit</button>
 			</form>
 			<br><br>
