--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -32,7 +32,7 @@
 			<h1>Insert Record</h1>
 			<!--Form used for adding a new record for an existing student into the database-->
 			<form name = "form">
-				<!--Displays list of all current students upon selection-->
+				<!--Displays list of all current students upon selection, with a custom filter-->
 				<label for = "client">Filter By Name: </label>
 					<input black id = "textFilter" name = "textFilter" type = "text" ng-model="clientFilter">
 					<div class="inputWrapperBig">
