--- a/Front-end/MultiTest.html
+++ b/Front-end/MultiTest.html
@@ -16,9 +16,16 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" >
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 	</head>
 	<body>
-		
+		<div ng-app="gideonApp" ng-controller = "testCtrl" style="padding:30px">
+			<div ng-repeat="s in students" style="padding:30px">
+				<input black id = "text" name = "text" type = "text" ng-model="s.one">
+				<input black id = "text" name = "text" type = "text" ng-model="s.two">
+				{{s.one + " " + s.two}}
+				<button ng-click = s.switch()>Switch</button>
+			</div>
+		</div>
 	</body>
 </html>
