--- a/Front-end/lineChart.html
+++ b/Front-end/lineChart.html
@@ -19,6 +19,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+		<script src="momentbymonth.js"></script>
 		<script src="app.js"></script>
 		<script src="ripple.js"></script>
 
