--- a/Front-end/UpdateRecord.html
+++ b/Front-end/UpdateRecord.html
@@ -13,6 +13,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
   		<script src="app.js"></script>
+  		<script src="updateRecordCtrl.js"></script>
   		<script src="ripple.js"></script>
 
 		<link rel="manifest" href="/site.webmanifest">
@@ -28,7 +29,7 @@
 		<link rel="stylesheet" type="text/css" href="RecordStyle.css">
 	</head>
 	<body>		
-		<div class = "exterior" ng-app = "gideonApp" ng-controller = "updateCtrl">
+		<div class = "exterior" ng-app = "gideonApp" ng-controller = "updateRecordCtrl">
 			<h1>Update Record</h1>
 			<!--Form for updating records for students who already are in the system-->
 			<form name = "form">
