--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -13,6 +13,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
   		<script src="app.js"></script>
+  		<script src="editStudentCtrl.js"></script>
 		<script src="ripple.js"></script>
 
 		<link rel="manifest" href="/site.webmanifest">
