--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -13,6 +13,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
   		<script src="app.js"></script>
+  		<script src="insertRecordCtrl.js"></script>
 		<script src="ripple.js"></script>
 
 		<link rel="manifest" href="/site.webmanifest">
@@ -28,7 +29,7 @@
 		<link rel="stylesheet" type="text/css" href="RecordStyle.css">
 	</head>
 	<body>
-		<div class = "exterior" ng-app = "gideonApp" ng-controller = "insertCtrl">
+		<div class = "exterior" ng-app = "gideonApp" ng-controller = "insertRecordCtrl">
 			<h1>Insert Record</h1>
 			<!--Form used for adding a new record for an existing student into the database-->
 			<form name = "form">
