--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -5,22 +5,27 @@
 
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="app.js"></script>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="app.js"></script>
+  		<script src="listCtrl.js"></script>
 		<script src="ripple.js"></script>
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
-		<link rel="stylesheet" type="text/css" href="ListStyle.css">	
+		<link rel="stylesheet" type="text/css" href="ListStyle.css">
 	</head>
 	<body>
 		<!--Selection buttons in the header to move to insert and update pages-->
@@ -32,7 +37,7 @@
 		<br/>
 
 		<!--List for displaying all students in the database that have book data-->
-		<div ng-app="gideonApp" ng-controller = "studentCtrl">
+		<div ng-app = "gideonApp" ng-controller = "listCtrl">
 			<h1>List of Students</h1>
 
 			<!--Filter text blocks-->
@@ -47,18 +52,14 @@
 				</div>
 			</div>
 
-			<br>
-			<br>
+			<!--Toggle for viewing only students with data, meant for testing-->
+			<br><br>
 			<button type = "button" class = "hoverable" id = "dataToggleBtn" ng-click = "toggleData()">
 				{{toggleButtonText}}
-				<!--<div id = "rippleContainer">
-					<span id = "rippleCircle"></span>
-				</div>-->
 			</button>
-			<br>
-			<br>
+			<br><br>
 
-			<!--Table of students, now arranged in columns as opposed to an actual table-->
+			<!--Header of table-->
 			<div id="tableContent">
 				<div class="columnContainer" id="tableHeaderContainer">
 					<div class="column" style="width:30%">Name</div>
@@ -66,12 +67,14 @@
 					<div class="column" style="width:12.5%">Grade</div>
 				</div>
 			</div>
+			<!--Main content of table-->
 			<div id="tableContent" ng-repeat="student in students | filter: {client: clientFilter, email: emailFilter}">	
 				<div class="columnContainer" id="tableContainer" ng-click="manageExpansion(student)">
 					<div class="column" style="width:30%">{{student.client}}&nbsp;</div>
 					<div class="column" style="width:57.5%">{{student.email}}&nbsp;</div>
 					<div class="column" style="width:12.5%">{{student.grade.split(" ")[0]}}&nbsp;</div>
 				</div>
+				<!--Additional information and buttons hidden in an accordion-->
 				<div id="expandableContainer" ng-class="{'collapsedContent':student!=expandedStudent, 'expandedContent':student==expandedStudent}">
 					ID: {{student.studentId}}<br>
 					Gender: {{student.gender}}<br>
@@ -84,8 +87,7 @@
 			</div>
 		</div>
 
+		<!--Footer exists to make selecting the last student on the list way less annoying-->
 		<div id = "footer">&nbsp;</div>
 	</body>
 </html>
-
-<!--logStudent(student.studentId, student.client)-->
