--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -12,6 +12,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="verify.js"></script>
   		<script src="app.js"></script>
   		<script src="editStudentCtrl.js"></script>
 		<script src="ripple.js"></script>
@@ -107,7 +108,7 @@
 				<button big ng-click = "updateStudent()">Submit</button>
 			</form>
 			<br><br>
-			<span ng-class="{'errorText':formStatus == 0, 'successText':formStatus == 1}">{{formStatusText}}</span>
+			<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
 		</div>
 	</body>
 </html>
