--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -13,7 +13,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
   		<script src="verify.js"></script>
-  		<script src="app.js"></script>
+  		<script src="gideonApp.js"></script>
   		<script src="insertRecordCtrl.js"></script>
 		<script src="ripple.js"></script>
 
