--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -12,7 +12,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-  		<script src="app.js"></script>
+  		<script src="gideonApp.js"></script>
   		<script src="listCtrl.js"></script>
 		<script src="ripple.js"></script>
 
@@ -81,7 +81,7 @@
 					Address: {{student.address}}<br>
 					Phone: {{student.phone}}<br>
 					Current Passes: {{student.currentPasses}}<br><br>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logStudent(student.studentId, student.client)">Line Chart</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logStudent(student.studentId, student.client)">Progress Chart</button>
 					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "editStudent(student.studentId, student.client)">Edit Student</button>
 				</div>
 			</div>
